--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://repremainder-backend.onrender.com
+REACT_APP_API_URL=https://repremainder-backend-production.up.railway.app
